# charlotte-backend-django

./: .gitignore  Makefile  pyproject.toml
api/: urls.py
api/core/: apps.py  models.py  receivers.py  serializers.py  urls.py  views.py
api/core/backfill/tests/: test_derivations.py
api/core/evidence/: case_scope.py  create.py  exceptions.py  models.py  queries.py  resolvers.py  results.py
api/core/evidence/tests/: test_case_scope.py  test_create.py  test_resolvers.py
api/core/fixtures/: suggested_evidence.json  suggested_subrules.json
api/core/graph/: __init__.py  base.py  compliance.py  financial.py  investigation.py  repository.py  risk.py
api/core/graph/models/: __init__.py  compliance.py  financial.py  investigation.py  risk.py
api/core/ingestion/: schemas.py
api/core/migrations/: 0001_initial.py  0002_case_and_caseevidence_fk.py  0003_caserule_and_evaluation.py  0004_suggestedevidence.py  0005_suggestedsubrule.py  0006_suggestedevidence_extracted_value.py
api/core/tasks/: evidence_extraction_tasks.py  rule_evaluation_tasks.py
api/core/tests/: test_evidence_case_integration.py
api/core/utils/: backfill_customer_attributes.py  backfill_transaction_fields.py  case_streams.py  cases.py  graph_events.py  graph_snapshot.py  responses.py  seed_db.py  suggested_evidence.py  suggested_subrules.py  transactions.py
api/user_management/: apps.py
api/user_management/migrations/: 0001_initial.py
api/user_management/models/: __init__.py  base.py  user.py
charlotte/: asgi.py  settings.py  urls.py  wsgi.py
verity/: settings.py
(+34 files in other folders)
