[tool.poetry]
name = "verity-backend-django"
version = "0.1.0"
description = ""
authors = ["Vikum Dabare <vikumdabare@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^6.0.6"
djangorestframework = "^3.17.1"
gunicorn = "^26.0.0"
python-dotenv = "^1.2.2"
kagglehub = "^1.0.2"
kagglesdk = ">=0.1.33"
django-dramatiq = "^0.15.0"
dramatiq = { version = "^1.18.0", extras = ["redis"] }
django-neomodel = "^0.2.0"
django-crum = "^0.7.9"
pytesseract = "^0.3.13"
pymupdf = "^1.28.0"
pillow = "^12.3.0"
requests = "^2.34.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
